fix header on mobile size

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,24 +9,22 @@
   background-repeat: no-repeat;
   display: flex;
   height: 300px;
-  padding: 0px $padding-horizontal;
+  max-width: 100%;
+  overflow: hidden;
 
   @media (max-width: $desktop_xsm) {
-    padding: 0px $padding-horizontal-mobile;
-  }
 
-  @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
-    padding: 0px $padding-horizontal-sm;
-  }
-
-  @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
-    padding: 0px $padding-horizontal-md;
+    .header__text {
+      font-size: 3rem;
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0 2rem;
+    }
   }
 
   &__text {
     color: white;
     font-size: 5rem;
-    min-width: 400px;
-    width: 40%;
+    max-width: 100%;
   }
 }
